# storage/docs/api-docs.json
@@ -4746,6 +4746,42 @@
                 }
             }
         },
+        "tenantsGenderStatistics": {
+            "get": {
+                "tags": [
+                    "Tenant",
+                    "Donut"
+                ],
+                "summary": "Tenants gender statistics for Donut Chart",
+                "description": "Get tenants gender statistics",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "description": "aaaa",
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "description": "aaaa",
+                                    "$ref": "#/definitions/Donut"
+                                },
+                                "message": {
+                                    "description": "aaaa",
+                                    "type": "boolean",
+                                    "items": "$ref:Tag"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/requests/{id}/statistics": {
             "get": {
                 "tags": [
@@ -6314,6 +6350,28 @@
         }
     },
     "definitions": {
+        "Donut": {
+            "required": [
+                "name",
+                "floor_nr"
+            ],
+            "properties": {
+                "labels": {
+                    "description": "Labels for statistics",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "data": {
+                    "description": "Labels for statistics",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "Address": {
             "required": [
                 "city",
